...
                                border: Border.all(
                                  color: FlutterFlowTheme.of(context).alternate,
                                  width: 2.0,
                                ),
                              ),
                              child: Column(
                                key: const ValueKey('Column_ct1y'),
                                mainAxisSize: MainAxisSize.min,
                                mainAxisAlignment: MainAxisAlignment.center,
                                crossAxisAlignment: CrossAxisAlignment.center,
                                children: [
                                  Icon(
                                    Icons.female_outlined,
...
                                        letterSpacing: 0.0,
                                      ),
                                ),
                                SizedBox(
                                  width: 300.0,
                                  child: TextFormField(
                                    key: const ValueKey('name_v1j0'),
                                    controller: _model.nameTextController,
                                    focusNode: _model.nameFocusNode,
                                    autofocus: true,
                                    autofillHints: const [AutofillHints.name],
                                    textCapitalization:
                                        TextCapitalization.words,
...
                              ].divide(const SizedBox(height: 12.0)),
                            ),
                          ],
                        ),
                      ),
                      FFButtonWidget(
                        key: const ValueKey('Button_wo0j'),
                        onPressed: () async {
                          if (_model.formKey.currentState == null ||
                              !_model.formKey.currentState!.validate()) {
                            return;
                          }
                          if (_model.hairLengthDropDownValue == null) {
...
